[gd_scene load_steps=14 format=2]

[ext_resource path="res://assets/Sprites/Unit/printer/printer.png" type="Texture" id=1]
[ext_resource path="res://assets/Sprites/Unit/Health/health.png" type="Texture" id=2]
[ext_resource path="res://Scripts/Unit.gd" type="Script" id=3]
[ext_resource path="res://Objects/BattleMap Objects/Grid.tres" type="Resource" id=4]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 72, 8 )

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("PathFollow2D/Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=3]
length = 1.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("PathFollow2D/Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1.5, 1.5, 1.5, 1 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "Blue"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("PathFollow2D/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.5, 0.75 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 4, 5, 6, 7 ]
}

[sub_resource type="Animation" id=5]
resource_name = "Cyan"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("PathFollow2D/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.5, 0.75 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 16, 17, 18, 19 ]
}

[sub_resource type="Animation" id=6]
resource_name = "Green"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("PathFollow2D/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.5, 0.75 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 8, 9, 10, 11 ]
}

[sub_resource type="Animation" id=7]
resource_name = "Purple"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("PathFollow2D/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.5, 0.75 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 20, 21, 22, 23 ]
}

[sub_resource type="Animation" id=8]
resource_name = "Red"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("PathFollow2D/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.5, 0.75 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=9]
resource_name = "Yellow"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("PathFollow2D/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.5, 0.75 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 12, 13, 14, 15 ]
}

[node name="Printer" type="Path2D"]
curve = null
script = ExtResource( 3 )
grid = ExtResource( 4 )
unit_referance = 5
unit_type = 1
cost = 7000
movement_type = 3
move_range = 6
vision_range = 3

[node name="PathFollow2D" type="PathFollow2D" parent="."]
rotate = false
loop = false

[node name="Sprite" type="Sprite" parent="PathFollow2D"]
texture = ExtResource( 1 )
hframes = 4
vframes = 6
frame = 20

[node name="Health" type="Sprite" parent="PathFollow2D"]
visible = false
position = Vector2( 3, 4 )
texture = SubResource( 1 )
hframes = 9
frame = 8

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/idle = SubResource( 2 )
anims/selected = SubResource( 3 )

[node name="ArmyColour" type="AnimationPlayer" parent="."]
anims/Blue = SubResource( 4 )
anims/Cyan = SubResource( 5 )
anims/Green = SubResource( 6 )
anims/Purple = SubResource( 7 )
anims/Red = SubResource( 8 )
anims/Yellow = SubResource( 9 )
